[package]
name = "bookstore-app"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookstore-database = { version = "0.1.0", path = "../bookstore-database" }
bookstore-records = { version = "0.1.0", path = "../bookstore-records" }

serde = { version = "1.0", features = ["derive"] }

glob = "0.3.0"
toml = "0.5.7"
unicase = "2.6.0"
itertools = "0.9.0"
rayon = "1.5.0"
jwalk = "0.5.1"
shellwords = "1.1.0"

# TODO: Remove this.
tui = { version = "0.13", default-features = false, features = ['crossterm'] }

