[package]
name = "bookstore-app"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookstore-database = { version = "0.1.0", path = "../bookstore-database" }
bookstore-records = { version = "0.1.0", path = "../bookstore-records" }

serde = { version = "1.0", features = ["derive"] }

glob = "0.3.0"
toml = "0.5.7"
unicase = { version = "2.6.0", git = "https://github.com/philippeitis/unicase.git", branch = "serde" }

itertools = "0.10.0"
rayon = "1.5.0"
jwalk = "0.6.0"
dirs = "3.0.1"