[package]
name = "bookstore-database"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bookstore-records = { version = "0.1.0", path = "../bookstore-records" }

unicase = { version = "2.6.0", git = "https://github.com/philippeitis/unicase.git", branch = "serde", features = ["serde"] }

sublime_fuzzy = "0.6.0"
indexmap = { version = "1.6.1", default-features = false, features = ['serde-1', 'rayon'] }
regex = "1.4.2"
rustbreak = { version = "2", features = ["ron_enc"] }
serde = { version = "1.0", features = ["derive", "rc"] }
ron = { version = "0.6.4", optional = true }

# Likely SQLx dependencies.
sqlx = { version = "0.5.1", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ], optional = true }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"], optional = true }
async-trait = { version = "0.1.42", optional = true }
crossbeam = { version = "0.8.0", optional = true }
futures = { version = "0.3.13", features = ["executor"], optional = true }

[features]
sqlite = ["sqlx", "tokio", "async-trait", "crossbeam", "futures", "ron"]

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.7.3"
