[package]
name = "bookstore-database"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bookstore-records = { version = "0.1.0", path = "../bookstore-records", features = ["serde"] }

unicase = { version = "2.6.0", git = "https://github.com/philippeitis/unicase.git", branch = "serde", features = ["serde"] }

sublime_fuzzy = "0.7.0"
indexmap = { version = "1.6.2", default-features = false, features = ["std", "serde-1", "rayon"] }
regex = "1.4.5"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

# SQLx dependencies
sqlx = { version = "0.5.1", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ], optional = true }
futures = { version = "0.3.13", features = ["executor"], optional = true }
ron = { version = "0.6.4", optional = true }

[features]
sqlite = ["sqlx", "futures", "ron"]
default = ["sqlite"]

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.8.3"
