[package]
name = "bookstore-database"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bookstore-records = { version = "0.1.0", path = "../bookstore-records", features = ["serde"] }

unicase = { version = "2.6.0", git = "https://github.com/philippeitis/unicase.git", branch = "serde", features = ["serde"] }

sublime_fuzzy = "0.7.0"
indexmap = { version = "1.7.0", default-features = false, features = ["std", "serde-1", "rayon"] }
regex = "1.5.4"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

# SQLx dependencies
sqlx = { version = "0.5.9", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ], optional = true }
ron = { version = "0.6.5", optional = true }
itertools = "0.10.1"

tokio = { version = "1.12.0", features = ["full", "rt"] }
async-trait = "0.1.51"

[features]
sqlite = ["sqlx", "ron"]
default = ["sqlite"]

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.8.4"

