[package]
name = "bookstore-records"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobi = "0.5.1"
quick-epub = { version = "0.1.0", path = "../quick-epub" }
serde = { version = "1.0", features = ["derive"] }
