[package]
name = "bookstore-tui"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bookstore-app = { version = "0.1.0", path = "../bookstore-app/" }
bookstore-database = { version = "0.1.0", path = "../bookstore-database" }
bookstore-records = { version = "0.1.0", path = "../bookstore-records" }

dirs = "4.0.0"
clap = "3.0.0-beta.4"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-truncate = "0.2.0"
crossterm = "0.21.0"
html2text = "0.2.1"
clipboard = { version = "0.5.0", optional = true }
unicode-width = "0.1.9"

[features]
copypaste = ["clipboard"]
