[package]
name = "bookstore-tui"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

[dependencies]
bookstore-app = { version = "0.1.0", path = "../bookstore-app" }
bookstore-database = { version = "0.1.0", path = "../bookstore-database" }
bookstore-records = { version = "0.1.0", path = "../bookstore-records" }
bookstore-input = { version = "0.1.0", path = "../bookstore-input" }

dirs = "4.0.0"
clap = "3.0.0-beta.5"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-truncate = "0.2.0"
crossterm = { version = "0.21.0", features = ["event-stream"] }
html2text = "0.2.1"
clipboard = { version = "0.5.0", optional = true }
unicode-width = "0.1.9"

tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
futures = "0.3.17"

tracing = "0.1.29"
tracing-subscriber = { version = "0.2.12", features = ["env-filter"] }
tracing-appender = "0.1"
tracing-futures = "0.2.5"
rolling-file = "0.1.0"

[features]
copypaste = ["clipboard"]
