[package]
name = "bookstore"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# UI
clap = "3.0.0-beta.2"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }
unicode-truncate = "0.1.1"

crossterm = "0.18.2"
shellwords = "1.1.0"
glob = "0.3.0"
unicase = "2.6.0"
toml = "0.5.7"
itertools = "0.9.0"
mobi = "0.5.0"
rayon = "1.5.0"
indexmap = { version = "1.6.0", default-features = false, features = ['serde-1', 'rayon'] }

# Epub parsing dependencies.
zip = "0.5.8"
regex = "1.4.2"
lazy_static = "1.4.0"
quick-xml = "0.20.0"

google-drive3 = { version = "*", optional = true}
hyper = { version = "^0.10", optional = true}
hyper-rustls = { version = "^0.6", optional = true}
serde_json = { version = "^1.0", optional = true}
yup-oauth2 = { version = "^1.0", optional = true}

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.7.3"

[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]

[features]
cloud = ["google-drive3", "hyper", "hyper-rustls", "serde_json", "yup-oauth2"]
