[package]
name = "bookworm-app"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookworm-database = { version = "0.1.0", path = "../bookworm-database" }
bookworm-records = { version = "0.1.0", path = "../bookworm-records" }
bookworm-input = { version = "0.1.0", path = "../bookworm-input" }

serde = { version = "1.0", features = ["derive"] }

glob = "0.3.0"
toml = "0.5.7"
unicase = { version = "2.6.0", git = "https://github.com/philippeitis/unicase.git", branch = "serde" }
tokio = { version = "1.15.0", features = ["full", "rt"] }

itertools = "0.10.1"
rayon = "1.5.1"
jwalk = "0.6.0"
dirs = "4.0.0"
# TODO: Switch to mainline opener when changes are merged
opener = { version = "0.5.0", git = "https://github.com/philippeitis/opener" }