[package]
name = "bookworm-database"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bookworm-records = { version = "0.1.0", path = "../bookworm-records", features = ["serde"] }
bookworm-input = { version = "0.1.0", path = "../bookworm-input" }

unicase = { version = "2.6.0", git = "https://github.com/philippeitis/unicase.git", branch = "serde", features = ["serde"] }
itertools = "0.10.1"

sublime_fuzzy = "0.7.0"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

tokio = { version = "1.15.0", features = ["full", "rt"] }
async-trait = "0.1.52"

# SQLx dependencies
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ], optional = true }
ron = { version = "0.7.0", optional = true }

tracing-futures = "0.2.5"
tracing = "0.1.29"

[features]
sqlite = ["sqlx", "ron"]
default = ["sqlite"]

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"

