[package]
name = "bookworm-tui"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

[dependencies]
bookworm-app = { version = "0.1.0", path = "../bookworm-app" }
bookworm-database = { version = "0.1.0", path = "../bookworm-database" }
bookworm-records = { version = "0.1.0", path = "../bookworm-records" }
bookworm-input = { version = "0.1.0", path = "../bookworm-input" }

dirs = "4.0.0"
clap = { version = "3", features = ["derive"] }
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
unicode-truncate = "0.2.0"
crossterm = { version = "0.22.1", features = ["event-stream"] }
html2text = "0.2.1"
# use copypasta, copypasta-ext
clipboard = { version = "0.5.0", optional = true }
unicode-width = "0.1.9"

tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.51"
futures = "0.3.19"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter", "json"] }
tracing-appender = "0.2.0"
tracing-futures = "0.2.5"
rolling-file = "0.1.0"

[features]
copypaste = ["clipboard"]
