[package]
name = "quick-epub"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.9"
quick-xml = "0.22.0"
isbn2 = { git = "https://github.com/philippeitis/isbn-rs.git" }
